--- a/templates/components/armor.hbs
+++ b/templates/components/armor.hbs
@@ -14,7 +14,7 @@
   </div>
   {{/if}}
 
-  <div class="special-armor-control"></div>
+  <div class="special-control"></div>
 
   {{#if (test "special" "in" data)}}
   <div class="svg-armor armor-special {{~#if data.special}} checked{{/if}}" data-target="system.armor.checked.special" data-value="{{data.special}}" data-dtype="Boolean">
