--- a/scss/sheets/_pc-sheet.scss
+++ b/scss/sheets/_pc-sheet.scss
@@ -120,7 +120,7 @@
                     pointer-events: none;
 
                     .main-armor-control,
-                    .special-armor-control {
+                    .special-control {
                       position: absolute;
                       pointer-events: auto;
 
@@ -133,7 +133,7 @@
                         left: 0px;
                       }
 
-                      &.special-armor-control {
+                      &.special-control {
                         z-index: 2;
 
                         height: 50%;
@@ -143,7 +143,7 @@
                       }
                     }
 
-                    .main-armor-control + .special-armor-control {
+                    .main-armor-control + .special-control {
                       display: none;
                     }
 
